begin of variables

--- a/templates/authelia-user-database.yaml.j2
+++ b/templates/authelia-user-database.yaml.j2
@@ -2,10 +2,10 @@
 # To create a hashed password you can run the following command:
 # `docker run authelia/authelia:latest authelia hash-password YOUR_PASSWORD``
 users:
-  {{ authelia_user_name }}:
-    displayname: {{ authelia_user_display }}
-    password: "{{ authelia_user_pass }}"
-    email: {{ authelia_user_email }}
+  {{ portainer_authelia.user_name }}:
+    displayname: {{ portainer_authelia.display_name }}
+    password: "{{ portainer_authelia.user_password }}"
+    email: {{ portainer_authelia.user_email }}
     groups:
       - admins
       - dev
