--- a/templates/grafana.ini.j2
+++ b/templates/grafana.ini.j2
@@ -264,10 +264,10 @@
 ;disable_initial_admin_creation = false
 
 # default admin user, created on startup
-admin_user = admin
+admin_user = {{ portainer_grafana.admin_user }}
 
 # default admin password, can be changed before first start of grafana,  or in profile settings
-admin_password = admin
+admin_password = {{ portainer_grafana.admin_password }}
 
 # default admin email, created on startup
 ; admin_email = admin@localhost
