--- a/templates/authelia-user-database.yaml.j2
+++ b/templates/authelia-user-database.yaml.j2
@@ -4,7 +4,7 @@
 users:
   {{ portainer_authelia_user.user_name }}:
     displayname: {{ portainer_authelia_user.display_name }}
-    password: "{{ portainer_authelia_password_hash }}"
+    password: {{ "\""}}{{ portainer_authelia_password_hash }}{{ "\""}}
     email: {{ portainer_authelia.user_email }}
     groups:
       - admins
